--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="mb-5">
+<div class="">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/">
   <img src="https://www.emqu.net/wp-content/uploads/2019/07/logo.png"></a>
