--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% include "header.html" %}
 {% block content %}
 <div class="container mt-5">
-  <h3>A continuacion se presenta la base de datos de las personas que han ingresado</h3>
+  <h3 class="text-center">A continuacion se presenta la base de datos de las personas que han ingresado</h3>
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         {% for message in messages %}
@@ -25,7 +25,7 @@
       <div class="">
         <input class="btn btn-danger form-control-sm" id="formFileSm" type="file" name="archivo"><br>
       </div>
-      <div class="p-1">
+      <div class="pl-1 mb-0 mt-1">
         <input class="btn btn-danger align-items-center" type="submit" value="Enviar">
       </div>
       </div>
@@ -48,7 +48,7 @@
           </tr>
         </thead>
         <tbody>
-        {% for person in people %}
+        {% for person in people.items  %}
           <tr>
             <td>{{person.nombre.title()}}</td>
             <td>{{person.apellido.title()}}</td>
@@ -62,6 +62,44 @@
         </tbody>
       </table>
     </div>
+
+
+    <!-- Pagination Links-->
+    <div class="text-right">
+        <a href="{{ url_for('home', page=people.prev_num) }}"
+          class="btn btn-outline-dark 
+          {% if people.page == 1 %}disabled{% endif %}">
+            &laquo;
+        </a>
+        <!-- Loop through the number of pages to display a link for each-->
+        {% for page_num in people.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+          {% if page_num %}
+          <!-- Check for the active page and set the link to "Active"-->
+            {% if people.page == page_num %}
+            <a href="{{ url_for('home', page=page_num) }}"
+              class="btn btn-dark">
+                {{ page_num }}
+            </a>
+            {% else %}
+            <a href="{{ url_for('home', page=page_num) }}"
+              class="btn btn-outline-dark">
+                {{ page_num }}
+            </a>
+            {% endif %}
+          {% else %}
+            ...
+          {% endif %}
+        {% endfor %}
+        <a href="{{ url_for('home', page=people.next_num) }}"
+          class="btn btn-outline-dark 
+          {% if people.page == people.pages %}disabled{% endif %}">
+            &raquo;
+        </a>
+    </div>
+    <p class="text-right mt-3">
+      Showing page {{ people.page }} of {{ people.pages }}
+    </p>
+    
 </div>
 
 {% endblock %}
