--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
       </div>
       <div class="col-12 d-flex justify-content-center flex-wrap">
       <div class="">
-        <input class="btn btn-danger form-control-sm" id="formFileSm" type="file" name="archivo"><br>
+        <input class="btn btn-secondary form-control-sm" id="formFileSm" type="file" name="archivo"><br>
       </div>
       <div class="pl-1 mb-0 mt-1">
-        <input class="btn btn-danger align-items-center" type="submit" value="Enviar">
+        <input class="btn btn-secondary align-items-center" type="submit" value="Enviar">
       </div>
       </div>
     </form>
@@ -99,7 +99,7 @@
     <p class="text-right mt-3">
       Showing page {{ people.page }} of {{ people.pages }}
     </p>
-    
+
 </div>
 
 {% endblock %}
