--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,7 +14,7 @@
 {% block content %}
 <div class="container padding-form">
     <h1 class="heading">Edit Person</h1>
-    <form action="" method="post" class="form" role="form">
+    <form action="" method="post" class="form">
     <div class="row">
         <div class="col-md-4">
             <label for="nombre">Nombre(s)</label>
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="mt-3">
-        <button type="submit" class="btn btn-primary">Actualizar</button>
+        {{ form.submit(class_="btn btn-primary") }}
     </div>
     </form>
 
