--- a/templates/add.html
+++ b/templates/add.html
@@ -15,9 +15,9 @@
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       {% for message in messages %}
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <div class="col-md-3 p-2 ml-2 alert alert-danger alert-dismissible fade show" role="alert">
         <p>{{ message }}</p> 
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <button type="button" class="close p-0 pl-5 mr-2" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button> 
       </div>
